k8s/ingress.yml
# ingress-controller 설처 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ortopia-msa-ingress

spec:
  tls:
    - hosts:
        - "server.yujeong.shop"
      secretName: nginx-jy-com-tls
  rules:
    - host: server.yujeong.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ortopia-gateway-service
                port:
                  number: 80
